@@ -194,9 +194,9 @@ import org.jfree.chart.plot.XYPlot;
 import org.jfree.chart.title.LegendTitle;
 import org.jfree.chart.title.TextTitle;
 import org.jfree.chart.title.Title;
+import org.jfree.chart.util.Align;
 import org.jfree.data.Range;
 import org.jfree.io.SerialUtilities;
-import org.jfree.ui.Align;
 import org.jfree.ui.Drawable;
 import org.jfree.ui.HorizontalAlignment;
 import org.jfree.ui.RectangleEdge;
